# drinkworks-firmware-modules

./: .gitmodules  README.md
src/: CMakeLists.txt
src/TimeSync/: CMakeLists.txt
src/TimeSync/include/: TimeSync.h  TimeSync_logging.h
src/TimeSync/src/: TimeSync.c
src/bleGap/: CMakeLists.txt
src/bleGap/include/: bleConnect.h  bleGap.h  bleStatus.h  ble_logging.h
src/bleGap/src/: bleConnect.c  bleGap.c
src/credential_storage_utility/: CMakeLists.txt
src/credential_storage_utility/include/: credential_decryption_utility.h  credential_logging.h  encryptedCertificate.h  encryptedCodeSigningCert.h  encryptedPrivateKey.h  obfuscatedEncryptionIV.h  obfuscatedEncryptionKey.h  pkcs11_cred_storage_utility.h
src/credential_storage_utility/src/: credential_decryption_utility.c  pkcs11_cred_storage_utility.c
src/event_notification/: CMakeLists.txt  README.md
src/event_notification/include/: event_notification.h
src/event_notification/src/: event_notification.c
src/event_records/: CMakeLists.txt
src/event_records/include/: event_record_logging.h  event_records.h
src/event_records/src/: event_records.c
src/fleetProvisioning/: CMakeLists.txt
src/fleetProvisioning/include/: fleetProvisioning.h  (+1 more)
src/host_ota/: CMakeLists.txt
src/image_processing/: CMakeLists.txt
src/json/: CMakeLists.txt
src/mqtt/: CMakeLists.txt
src/nvs_utility/: CMakeLists.txt
src/ota/: CMakeLists.txt
src/rtc_MCP7940N/: CMakeLists.txt
src/shadow/: CMakeLists.txt
src/shci/: CMakeLists.txt
src/support/: CMakeLists.txt
src/sysParam/: CMakeLists.txt
test/: fifo_test.c  (+8 more)
(+91 files in other folders)
